--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
   <head></head>
   <body>
      <h1>Mi página</h1>
-     <p>Alexander E.B </p>
-     <p>un cambio</p>
-    <p>segundo cambio</p>
+    <p>Alexander Escalante Beltran</p>
+    <p>Hola mundo</p>
   </body>
 </html>
